[package]
name = "tauri-plugin-videoplayer"
version = "0.1.5"
authors = [ "YeonV" ]
description = "Fullscreen native video player for tauri"
repository = "https://github.com/YeonV/tauri-plugin-videoplayer"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-videoplayer"

[dependencies]
tauri = { version = "2.8.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
